fixed the responsiveness on mobile view

--- a/dash.css
+++ b/dash.css
@@ -185,7 +185,7 @@ body {
 
 @media (max-width: 400px){
   .main-container {
-    min-height: 700px;
+    min-height: 800px;
   }
   
 }
